# SDP-2023-HW

./: CMakeLists.txt  SDP2.pages  hw  hw.cpp  test.cpp  tree_data.txt  tree_data2.txt
hw.dSYM/Contents/Resources/DWARF/: hw
hw.dSYM/Contents/Resources/Relocations/aarch64/: hw.yml
src/: hw.cpp
src/headers/: cmd.h  node.h  tree.h
tests/: catch2.h  cmd_tests.cpp  includes.h  node_tests.cpp  tree_tests.cpp
